Updated wrong spelling of Ingredients

--- a/recipes/chicken-adobo.html
+++ b/recipes/chicken-adobo.html
@@ -51,7 +51,7 @@
         and other spices might go into the mix, and even the type of vinegar can vary.</p>    
     </div>
    <div>
-        <h2> Ingridients</h2>
+        <h2> Ingredients</h2>
         <ul>
            <li>  3 tablespoons vegetable oil</li>     
            <li>  6 cloves garlic, peeled and thinly sliced</li>  
