Update pork-menudo ingredients spelling

--- a/recipes/pork-menudo.html
+++ b/recipes/pork-menudo.html
@@ -50,7 +50,7 @@
             mechado, except menudo has the addition of chickpeas and raisins.</p>    
     </div>
    <div>
-        <h2> Ingridients</h2>
+        <h2> Ingredients</h2>
         <ul>
            <li> 2 ¼ boneless pork chops</li>     
            <li> 2 ¼ boneless pork chops</li>  
