Updated stewed-pork ingredients spelling.

--- a/recipes/stewed-pork.html
+++ b/recipes/stewed-pork.html
@@ -57,7 +57,7 @@
             Sometimes pork kasim and pigue (pork ham) are also used.</p>
     </div>
    <div>
-        <h2> Ingridients</h2>
+        <h2> Ingredients</h2>
         <ul>
            <li> 1-kilo Pork, cut into chunks</li>     
            <li> 3 tomatoes, cut into 2 pieces</li>  
